[package]
name = "wordy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontdue = "*"
image = "*"
palette = "*"
serenity = {version = "*", default-features = false, features = [
    "cache", "model", "builder", "client", "gateway", "http", 
    "utils", "rustls_backend"
]}
anyhow = "*"
itertools = "*"
rand = "*"
lazy_static = "*"
log = "*"
env_logger = "*"
regex = "*"
wordcloud-rs = "*"
bimap = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
dashmap = "*"